// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<span
  class="za-radio za-radio--checked"
>
  <span
    class="za-radio__widget"
  >
    <span
      class="za-radio__inner"
    />
  </span>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
  <input
    checked=""
    class="za-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio renders correctly 1`] = `
<span
  class="za-radio"
>
  <span
    class="za-radio__widget"
  >
    <span
      class="za-radio__inner"
    />
  </span>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
  <input
    class="za-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio type is button 1`] = `
<button
  class="za-radio"
  type="button"
>
  选项一
  <input
    class="za-radio__input"
    type="radio"
    value="0"
  />
</button>
`;

exports[`Radio type is list 1`] = `
<li
  class="za-list-item za-radio za-list-item--link"
>
  <div
    class="za-list-item__prefix"
  >
    <span
      class="za-radio__widget"
    >
      <span
        class="za-radio__inner"
      />
    </span>
    <input
      class="za-radio__input"
      type="radio"
      value="0"
    />
  </div>
  <div
    class="za-list-item__wrapper"
  >
    <div
      class="za-list-item__inner"
    >
      <div
        class="za-list-item__title"
      >
        <span
          class="za-radio__text"
        >
          选项一
        </span>
        <input
          class="za-radio__input"
          type="radio"
          value="0"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="za-radio-group za-radio-group--xs za-radio-group--radius"
>
  <div
    class="za-radio-group__inner"
  >
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="za-radio za-radio--checked"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="za-radio-group za-radio-group--xs za-radio-group--radius"
>
  <div
    class="za-radio-group__inner"
  >
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="za-radio za-radio--checked"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="za-radio-group za-radio-group--xs za-radio-group--radius"
>
  <div
    class="za-radio-group__inner"
  >
    <span
      class="za-radio za-radio--checked"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        />
      </span>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;
